--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 *.so
 *.dylib
 
-# Test binary, built with `go test -c`
+# Test binary, uilt with `go test -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
@@ -23,3 +23,7 @@ go.work.sum
 
 # env file
 .env
+
+# tmp
+tmp/
+bin/
