--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,12 @@
-PORT=9999
+PORT=8000
+DB_HOST=postgres
+DB_DATABASE=cnc-killer
+DB_USERNAME=user
+DB_PASSWORD=passwd123
+DB_PORT=5432
+DB_SSL_MODE=disable
+
+TIMEZONE=Asia/Bangkok
+
+PG_EMAIL="admin@admin.com"
+PG_PASSWORD="admin1234
