add user getRole to be examples

--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,5 @@ DB_SSL_MODE=disable
 
 TIMEZONE=Asia/Bangkok
 
-PG_EMAIL="admin@admin.com"
-PG_PASSWORD="admin1234
+PG_EMAIL=admin@admin.com
+PG_PASSWORD=admin1234
