add websocket api may have some bug, add game status

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ DB_DATABASE=cnc-killer
 DB_USERNAME=user
 DB_PASSWORD=passwd123
 DB_PORT=5432
+EXTERNAL_DB_PORT=5430
 DB_SSL_MODE=disable
 
 TIMEZONE=Asia/Bangkok
