--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,11 @@
 services:
   api:
     build:
-      context: ./docker/
-      dockerfile: dev.Dockerfile
+      context: .
+      dockerfile: ./docker/dev.Dockerfile
     restart: on-failure
     volumes:
       - .:/app
-    working_dir: /app
     ports:
       - ${PORT}:${PORT}
     depends_on:
@@ -25,7 +24,7 @@ services:
       POSTGRES_DB: ${DB_DATABASE}
       TZ: Asia/Bangkok
     ports:
-      - "5430:5432"
+      - "${EXTERNAL_DB_PORT}:5432"
     networks:
       - cnc-killer-network
 
