add something to env.example

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,24 @@
 PORT=8000
+
+#for database connection
 DB_HOST=postgres
 DB_DATABASE=cnc-killer
 DB_USERNAME=user
 DB_PASSWORD=passwd123
 DB_PORT=5432
+
+#for migration
 EXTERNAL_DB_PORT=5430
 DB_SSL_MODE=disable
 
 TIMEZONE=Asia/Bangkok
 
+#for pgadmin
 PG_EMAIL=admin@admin.com
 PG_PASSWORD=admin1234
 
-GOOGLE_CLIENT_ID=NONE
-GOOGLE_CLIENT_SECRET=NONE
+#for google auth
+GOOGLE_CLIENT_ID= NONE
+GOOGLE_CLIENT_SECRET= NONE
+GOOGLE_USER_INFO_URL= NONE
+REDIRECT_URL=http://localhost:${PORT}/auth/google/callback
