add jwt , refactor config , add refresh token to users , delete user_id use email as pk instead, fix user repo to match database , fix some bug

--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,12 @@ PG_EMAIL=admin@admin.com
 PG_PASSWORD=admin1234
 
 #for google auth
-GOOGLE_CLIENT_ID= NONE
-GOOGLE_CLIENT_SECRET= NONE
-GOOGLE_USER_INFO_URL= NONE
-REDIRECT_URL=http://localhost:${PORT}/auth/google/callback
+GOOGLE_CLIENT_ID=NONE
+GOOGLE_CLIENT_SECRET=NONE
+GOOGLE_USER_INFO_URL=NONE
+GOOGLE_REDIRECT_URL=NONE
+
+#for jwt
+JWT_SECRET=secret
+JWT_ACCESS_EXP=5h
+JWT_REFRESH_EXP=2d
